--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,6 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -27,12 +21,47 @@
 .App-link {
   color: #61dafb;
 }
+.UI {
+  /* min-width: 100px; */
+  flex-shrink: 1;
+  padding: 10px;
+  border: .05em solid #303030f5;
+  border-radius: 5px;
+  background-color: #d7ccaaa3;
+  text-align: center;
+  box-shadow: 2px 2.5px 5px .5px #000000;
+}
+.PL {
+  /* min-width: 100px; */
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  column-gap: 1%;
+  padding: 10px;
+  border: .05em solid #303030f5;
+  border-radius: 5px;
+  background-color: #9cdad4a3;
+  text-align: center;
+  box-shadow: 2px 2.5px 5px .5px #000000;
+}
+.BG {
+  /* min-width: 100px; */
+  padding: 10px;
+  border: .05em solid #303030f5;
+  border-radius: 5px;
+  background-color: #52535394;
+  text-align: center;
+  box-shadow: 2px 2.5px 5px .5px #000000;
+}
+img{
+  object-fit: fill;
+  /* max-height: 10em;
+  max-width: 80%; */
+}
+.Error {
+  /* min-width: 100px; */
+  padding: 10px;
+  border: .05em solid #d30000d2;
+  border-radius: 5px;
+  background-color: #db2100;
+  text-align: center;
+  box-shadow: 1px 2.5px 2.5px .5px #00000085;
 }
